--- a/app/main.css
+++ b/app/main.css
@@ -7,7 +7,7 @@ body {}
   font-size: 11px;
   color: #aaa; }
 .main-navigation {
-  background-image: url("../img/nz.gif");
+  background-image: url("../assets/img/nz.gif");
   background-color: #F5F5F5;
   margin-bottom: 0px; }
 .page-heading-stripe {
@@ -81,7 +81,7 @@ body {}
 .card-front.card-editor-container {}
 .card-back.card-editor-container {}
 .card-editor {
-  background-image: url("../img/dotted-21.gif");
+  background-image: url("../assets/img/dotted-21.gif");
   box-shadow: 1px 1px 3px #F5F5F5;
   background-attachment: local;
   background-repeat: repeat;
