edit deck view updates

--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -89,18 +89,18 @@
   <div class='row'>
     <div class='col-sm-6'>
       <div class='card-front-container card-editor-container'>
-        <textarea class='card-editor' placeholder='Enter card Front'><%= front %></textarea>
+        <textarea class='card-editor' placeholder='Enter card Front'></textarea>
       </div>
     </div>
     <div class='col-sm-6'>
       <div class='card-back-container card-editor-container'>
-        <textarea class='card-editor' placeholder='Enter card back'><%= back %></textarea>
+        <textarea class='card-editor' placeholder='Enter card back'></textarea>
       </div>
     </div>
   </div>
   <div class='btn-group btn-group-sm pull-right'>
     <button class='btn btn-default' type='button'><i class='fa fa-fw fa-exchange'></i> Swap </button>
-    <button data-cardid='<%= card_id %>' class='btn btn-default view-editor-card-delete-btn' type='button'><i class='fa fa-fw fa-trash'></i> Delete </button>
+    <button data-cardid='' class='btn btn-default view-editor-card-delete-btn' type='button'><i class='fa fa-fw fa-trash'></i> Delete </button>
   </div>
   <div class='clearfix'></div>
 </script>
