--- a/app/templates/browse.html
+++ b/app/templates/browse.html
@@ -3,18 +3,63 @@
   <div class='page-heading-stripe'>
     <div class='container'>
       <h1>
-        <i class='fa fa-book fa-fw'></i>
+        <i class='fa fa-wheelchair fa-fw'></i>
         <span class='page-heading-deckTitle'>
           Popular Decks
         </span>
       </h1>
+        <form class="form-inline pull-right" role="form">
+            <input type="text" class="form-control" placeholder="Search Decks">
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
     </div>
   </div>
   <div class='container'>
-    <% _.each(decks, function(deck){ %>
-      <div> 
-        <%= deck.name %>
+      <div class="row">
+        <div class="col-md-4">
+          <div class='panel panel-default' id='view-browse-sidebar'></div>
+        </div>
+        <div class="col-md-8">
+          <div class="row">
+            <div class='panel panel-default' id='view-browse-toolbar'></div>
+          </div>
+          <div class="row">
+            <div class='panel panel-default' id='view-browse-results'></div>
+          </div>
+        </div>
       </div>
-    <% }); %>
+
+    
   </div>
+</script>
+
+
+<script id="view-browse-toolbar-template" type="text/template">
+
+
+</script>
+
+<script id="view-browse-sidebar-template" type="text/template">
+
+
+
+</script>
+
+<script id="view-browse-results-template" type="text/template">
+<div class="panel-body">
+<% _.each(decks, function(deck){ %>
+  <div> 
+    <h3><%= deck.deck_id %>: <%= deck.name %></h3>
+    <p><%= deck.description %></p>
+    <p><%= deck.created %></p>
+    <hr/>
+  </div>
+<% }); %>
+</div>
+</script>
+
+<script id="view-browse-result-template" type="text/template">
+
+
+
 </script>
