--- a/app/main.css
+++ b/app/main.css
@@ -103,7 +103,7 @@ body { font-family: 'Roboto',sans-serif; }
 .card-editor:focus {
   border: 1px solid #C9CCCC;
   box-shadow: 0px 0px 4px rgb(170, 222, 239); }
-.card-editor:disabled { opacity: .75 }
+.card-editor:disabled { opacity: .85 }
 .card-editor-curtain {
   position: absolute;
   width: 100%;
@@ -112,10 +112,8 @@ body { font-family: 'Roboto',sans-serif; }
   text-transform: uppercase;
   padding: 4px;
   font-size: 11px;
-  font-weight: bold;
-  letter-spacing: 0.02em; }
-.card-editor-curtain.faded {
-  background-color: rgba(204, 204, 204, 0.35);
-}
+  font-weight: 500;
+  letter-spacing: 0.03em;
+  z-index: 1; }
 .card-editor-curtain .curtain-success { color: green; }
 .card-editor-curtain .curtain-error { color: rgba(255, 0, 0, 0.69); }
