--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -43,12 +43,25 @@
   </div>
   <% if (description) { %>
   <div class='container'>
+    <div class='meta-deck-description'>
     <% if (description.length > 0) { %>
-    <p class='meta-deck-description'> <%= description %> - <a href='#'>edit</a></p>
-    <input type='text' class='form-control' value='<%= description %>' maxlength='256'>
+      <p> <%= description %> - <button type='button' class='btn btn-link edit-deck-description-btn'>edit</button></p>
     <% } else { %>
-      <p class='meta-deck-description'><a href='#'><i class='fa fa-fw fa-plus'></i> add a description</a></p>
+      <p><button type='button' class='btn btn-link edit-deck-description-btn'><i class='fa fa-fw fa-plus'></i> add a description</button></p>
     <% } %>
+      <div class='edit-deck-description-container'>
+        <label for='edit-deck-description'> Description </label>
+        <div class='row'>
+          <div class='col-sm-9'>
+            <input type='text' class='form-control' value='<%= description %>' maxlength='256'>
+            </label>
+          </div>
+          <div class='col-sm-3'>
+            <button class='btn btn-block btn-default'> Save </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <% } %>
 </script>
