delete decks and output sanitized

--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -23,11 +23,16 @@
         Deck:
         <span class='page-heading-deckTitle'>
         <% if (name) { %>
-          <%= name %>
+          <%- name %>
         <% } else { %>
           Loading
         <% } %>
         </span>
+        <!--
+        <div class='form-inline'>
+          <input type='text' class='form-control' value='<%- name %>'>
+        </div>
+        -->
         <% if (!name) { %>
         <i class='fa fa-fw fa-cog fa-spin'></i>
         <% } %>
@@ -52,7 +57,7 @@
     <div class='meta-deck-description'>
       <% if (description.length > 0) { %>
       <p>
-        <%= description %> &#8212;
+        <%- description %> &#8212;
         <button type='button' class='btn btn-sm btn-link edit-deck-description-btn'>
           edit
         </button>
@@ -68,7 +73,7 @@
         <label for='edit-deck-description'> Description </label>
         <div class='row'>
           <div class='col-sm-8'>
-            <input type='text' class='form-control edit-deck-description' value='<%= description %>' placeholder='Short description of this deck' maxlength='128'>
+            <input type='text' class='form-control edit-deck-description' value='<%- description %>' placeholder='Short description of this deck' maxlength='128'>
             </label>
           </div>
           <div class='col-sm-2'>
@@ -124,19 +129,19 @@
     <div class='col-sm-6'>
       <div class='card-front-container card-editor-container'>
         <div class='card-editor-curtain'></div>
-        <textarea class='card-editor' placeholder='Enter card Front'><%= front %></textarea>
+        <textarea class='card-editor' placeholder='Enter card Front'><%- front %></textarea>
       </div>
     </div>
     <div class='col-sm-6'>
       <div class='card-back-container card-editor-container'>
         <div class='card-editor-curtain'></div>
-        <textarea class='card-editor' placeholder='Enter card back'><%= back %></textarea>
+        <textarea class='card-editor' placeholder='Enter card back'><%- back %></textarea>
       </div>
     </div>
   </div>
   <div class='btn-group btn-group-sm pull-right'>
     <button tabindex='-1' class='btn btn-default' type='button'><i class='fa fa-fw fa-exchange'></i> Swap </button>
-    <button tabindex='-1' data-cardid='<%= card_id %>' class='btn btn-default view-editor-card-delete-btn' type='button'><i class='fa fa-fw fa-trash'></i> Delete </button>
+    <button tabindex='-1' data-cardid='<%- card_id %>' class='btn btn-default view-editor-card-delete-btn' type='button'><i class='fa fa-fw fa-trash'></i> Delete </button>
   </div>
   <div class='clearfix'></div>
 </script>
