Added subviews for browse result templates

--- a/app/main.css
+++ b/app/main.css
@@ -144,3 +144,5 @@ body { font-family: 'Roboto',sans-serif; }
   border: 1px solid #D4DFE0;
   min-height: 148px;
   width: 100%; }
+.browse-result-bank { padding: 20px 20px 0px 20px;}
+.browse-result-bank:not(:last-child){ border-bottom: 1px solid #ddd;}
