--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -1,27 +1,38 @@
 <!-- View Deck Template -->
 <script id='view-viewer-template' type='text/template'>
-  <div class='page-heading-stripe'>
-    <div class='container'>
-      <h1>
-        <i class='fa fa-book fa-fw'></i>
-        Deck:
-        <span class='page-heading-deckTitle'>
-          <% if (name) { %>
-            <%- name %>
-          <% } else { %>
-            Loading
-          <% } %>
-        </span>
-      </h1>
-    </div>
-  </div>
+  <div class='view-viewerHeader-container'></div>
   <div class='container'>
     <div class='row'>
       <div class='col-md-8 view-viewerCards-container'></div>
       <div class='col-md-4'></div>
     </div>
   </div>
+</script>
+
+<!-- All Cards View Template -->
+<script id='view-viewer-header-template' type='text/template'>
+  <div class='page-heading-stripe'>
+    <div class='container'>
+      <h1>
+        <i class='fa fa-book fa-fw'></i>
+        Deck:
+        <span class='page-heading-deckTitle'>
+        <% if (name) { %>
+          <%- name %>
+        <% } else { %>
+          Loading
+        <% } %>
+        </span>
+      </h1>
+    </div>
   </div>
+  <% if (description && description.length > 0) { %>
+  <div class='container'>
+    <div class='meta-deck-description'>
+      <p><%- description %> </p>
+    </div>
+  </div>
+  <% } %>
 </script>
 
 <!-- All Cards View Template -->
