user resource POST

--- a/app/templates/template.navbar.html
+++ b/app/templates/template.navbar.html
@@ -33,6 +33,22 @@
         <h4 class='modal-title' id='modal-register-label'><i class='fa fa-fw fa-user'></i> Register new Account </h4>
       </div>
       <div class='modal-body'>
+        <div class='form-group'>
+          <label for='modal-register-email'>Email address</label>
+          <input type='email' class='form-control' id='modal-register-email' placeholder='Enter email'>
+        </div>
+        <div class='form-group'>
+          <label for='modal-register-name'>Username</label>
+          <input type='text' class='form-control' id='modal-register-name' placeholder='Enter username'>
+        </div>
+        <div class='form-group'>
+          <label for='modal-register-pass'>Password</label>
+          <input type='password' class='form-control' id='modal-register-pass' placeholder='Password'>
+        </div>
+        <div class='form-group'>
+          <label for='modal-register-pass2'>Confirm Password</label>
+          <input type='password' class='form-control' id='modal-register-pass2' placeholder='Reenter Password'>
+        </div>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-default' data-dismiss='modal'>Close</button>
