--- a/app/templates/template.navbar.html
+++ b/app/templates/template.navbar.html
@@ -17,8 +17,9 @@
       </ul>
       <ul class='nav navbar-nav navbar-right'>
         <li id='nav-local'><a href='#local'>My Decks <span class='badge'></span></a></li>
-        <li><button class='btn navbar-btn btn-default' id='navbar-login-btn'>login</button></li>
-        <li><button class='btn navbar-btn btn-default' id='navbar-register-btn'>register</button></li>
+        <li><button class='btn navbar-btn btn-link' id='navbar-login-btn'>login</button></li>
+        <li><button class='btn navbar-btn btn-link' id='navbar-register-btn'>register</button></li>
+        <li><button class='btn navbar-btn btn-link' id='navbar-logout-btn'>logout</button></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
@@ -35,11 +36,11 @@
       <div class='modal-body'>
         <div class='form-group'>
           <label for='modal-register-email'>Email address</label>
-          <input type='email' class='form-control' id='modal-register-email' placeholder='Enter email'>
+          <input type='email' class='form-control' id='modal-register-email' placeholder='Email'>
         </div>
         <div class='form-group'>
           <label for='modal-register-name'>Username</label>
-          <input type='text' class='form-control' id='modal-register-name' placeholder='Enter username'>
+          <input type='text' class='form-control' id='modal-register-name' placeholder='Username'>
         </div>
         <div class='form-group'>
           <label for='modal-register-pass'>Password</label>
@@ -53,6 +54,32 @@
       <div class='modal-footer'>
         <button type='button' class='btn btn-default' data-dismiss='modal'>Close</button>
         <button type='button' class='btn btn-primary' id='modal-register-confirm-btn'>Register</button>
+      </div>
+    </div>
+  </div>
+</script>
+
+<script id='modal-login-template' type='text/template'>
+  <div class='modal-dialog'>
+    <div class='modal-content'>
+      <!-- CHECKIN MODAL HEADER -->
+      <div class='modal-header'>
+        <button type='button' class='close' data-dismiss='modal'><span aria-hidden='true'>&times;</span><span class='sr-only'>Close</span></button>
+        <h4 class='modal-title' id='modal-login-label'><i class='fa fa-fw fa-user'></i> Login </h4>
+      </div>
+      <div class='modal-body'>
+        <div class='form-group'>
+          <label for='modal-login-email'>Email address</label>
+          <input type='email' class='form-control' id='modal-login-email' placeholder='Enter email'>
+        </div>
+        <div class='form-group'>
+          <label for='modal-login-pass'>Password</label>
+          <input type='password' class='form-control' id='modal-login-pass' placeholder='Password'>
+        </div>
+      </div>
+      <div class='modal-footer'>
+        <button type='button' class='btn btn-default' data-dismiss='modal'>Close</button>
+        <button type='button' class='btn btn-primary' id='modal-login-confirm-btn'>Login</button>
       </div>
     </div>
   </div>
