--- a/app/templates/template.navbar.html
+++ b/app/templates/template.navbar.html
@@ -34,22 +34,25 @@
         <h4 class='modal-title' id='modal-register-label'><i class='fa fa-fw fa-user'></i> Register new Account </h4>
       </div>
       <div class='modal-body'>
-        <div class='form-group'>
-          <label for='modal-register-email'>Email address</label>
-          <input type='email' class='form-control' id='modal-register-email' placeholder='Email'>
+        <div id='modal-register-form'>
+          <div class='form-group'>
+            <label for='modal-register-email'>Email address</label>
+            <input type='email' class='form-control' id='modal-register-email' placeholder='Email'>
+          </div>
+          <div class='form-group'>
+            <label for='modal-register-name'>Username</label>
+            <input type='text' class='form-control' id='modal-register-name' placeholder='Username'>
+          </div>
+          <div class='form-group'>
+            <label for='modal-register-pass'>Password</label>
+            <input type='password' class='form-control' id='modal-register-pass' placeholder='Password'>
+          </div>
+          <div class='form-group'>
+            <label for='modal-register-pass2'>Confirm Password</label>
+            <input type='password' class='form-control' id='modal-register-pass2' placeholder='Reenter Password'>
+          </div>
         </div>
-        <div class='form-group'>
-          <label for='modal-register-name'>Username</label>
-          <input type='text' class='form-control' id='modal-register-name' placeholder='Username'>
-        </div>
-        <div class='form-group'>
-          <label for='modal-register-pass'>Password</label>
-          <input type='password' class='form-control' id='modal-register-pass' placeholder='Password'>
-        </div>
-        <div class='form-group'>
-          <label for='modal-register-pass2'>Confirm Password</label>
-          <input type='password' class='form-control' id='modal-register-pass2' placeholder='Reenter Password'>
-        </div>
+        <span id='modal-register-spinner'><i class='spinner fa fa-2x fa-fw fa-cog fa-spin'></i></span>
       </div>
       <div class='modal-footer'>
         <button type='button' class='btn btn-default' data-dismiss='modal'>Close</button>
